feat: Add health monitoring and auto-reconnect functionality
- Implemented HealthChecker to monitor VPN connection health and manage auto-reconnect attempts.
- Added health state tracking for connections with corresponding notifications.
- Enhanced UI to display connection statistics including uptime and latency.
- Introduced CLI commands for listing profiles, connecting, and disconnecting from VPNs.
- Updated logging to support structured output and file logging.
- Created comprehensive tests for health checking and connection management.

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ debian/*.substvars
 debian/files
 debian/
 snap/
+docs/
 
 # =============================================================================
 # Vendor (opcional - descomentar si prefieres no versionar dependencias)
