fix(desktop): add StartupWMClass entry for application window management

--- a/assets/vpn-manager.desktop
+++ b/assets/vpn-manager.desktop
@@ -9,3 +9,4 @@ Terminal=false
 Categories=Network;System;
 Keywords=vpn;openvpn;network;security;
 StartupNotify=true
+StartupWMClass=com.vpnmanager.app
